Enhance HTTP request handling and load testing capabilities; add static route support and optimize content length parsing